--- a/style/style.css
+++ b/style/style.css
@@ -3,16 +3,21 @@
 * {
     font-family: 'Poppins', sans-serif;
 }
+
 :root {
     --purple: rgb(231, 3, 91);
 }
+
 body {
     margin: 0;
     padding: 0;
 }
-section, header{
+
+section,
+header {
     margin-bottom: 100px;
 }
+
 h1 {
     font-size: 50px;
 }
@@ -29,6 +34,7 @@ h2 {
 .flex {
     display: flex;
 }
+
 /*------------------------
  header section here 
 --------------------------*/
@@ -71,15 +77,17 @@ h2 {
     border-radius: 10px;
     font-weight: 500;
 }
+
 /*-----------------------
 blog section here 
 -------------------------*/
-.blogs{
+.blogs {
     display: grid;
     grid-template-columns: 220px auto;
     gap: 20px;
 }
-.match_buttons{
+
+.match_buttons {
     flex-direction: column;
     text-align: center;
     background-color: black;
@@ -87,70 +95,100 @@ blog section here
     border-radius: 10px;
     height: 215px;
 }
-.match_buttons>a{
+
+.match_buttons>a {
     padding: 13px 10px;
     margin: 10px;
     background-color:
-    white;
+        white;
     color: black;
     text-decoration: none;
     border-radius: 5px;
     font-weight: 600;
 }
-.def_button{
+
+.def_button {
     background-color: var(--purple) !important;
     color: white !important;
 }
-.blog{
+
+.blog {
     border: 1px solid rgb(196, 196, 196);
     border-radius: 10px 10px 0px 0px;
 }
-.main_blog{
+
+.main_blog {
     display: grid;
     grid-template-columns: repeat(3, auto);
     grid-template-rows: repeat(3, 1fr);
     gap: 20px;
 }
-.blog_img img{
+
+.blog_img img {
     width: 100%;
 }
-.watch_text{
+
+.watch_text {
     padding: 15px;
 }
-.watch_text p{
+
+.watch_text p {
     width: 240px;
     font-weight: 500;
 }
-.watch_text a{
+
+.watch_text a {
     text-decoration: none;
     color: black;
     border: 1px solid rgb(196, 196, 196);
     padding: 5px;
     border-radius: 5px;
 }
-.watch_comment span{
+
+.watch_comment span {
     padding: 0 10px;
 }
+
+.view_btn>button {
+    display: none;
+    background: var(--purple);
+    padding: 10px 15px;
+    font-size: 16px;
+    font-weight: 500;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    margin-top: 50px;
+}
+
+.view_btn {
+    margin: auto;
+    width: 95px;
+}
+
 /*------------------------
  footer section here 
 ------------------------- */
-footer{
+footer {
     background: black;
     color: white;
     text-align: center;
 }
-.footer_links{
+
+.footer_links {
     justify-content: space-evenly;
     width: 800px;
     margin: auto;
     padding-bottom: 100px;
 }
-footer>h2{
+
+footer>h2 {
     display: block;
     margin: 50px;
     padding-top: 100px;
 }
-.footer_links a{
+
+.footer_links a {
     text-decoration: none;
     color: white;
     text-align: center;
