--- a/style/style.css
+++ b/style/style.css
@@ -193,3 +193,9 @@ footer>h2 {
     color: white;
     text-align: center;
 }
+@media only screen and (max-width: 688px) {
+    .container
+}
+@media only screen and (min-width: 992px) {
+
+}
