--- a/style/style.css
+++ b/style/style.css
@@ -194,7 +194,7 @@ footer>h2 {
     text-align: center;
 }
 @media only screen and (max-width: 688px) {
-    .container
+    .container{}
 }
 @media only screen and (min-width: 992px) {
 
