--- a/style/style.css
+++ b/style/style.css
@@ -1,41 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
-
 * {
     font-family: 'Poppins', sans-serif;
 }
-
 :root {
     --purple: rgb(231, 3, 91);
     --ltpurple: rgb(255, 100, 159);
 }
-
 body {
     margin: 0;
     padding: 0;
 }
-
-section,
-header {
-    margin-bottom: 100px;
-}
-
-h1 {
-    font-size: 50px;
-}
-
-h2 {
-    font-size: 40px;
-}
-
+section,header {margin-bottom: 100px;}
+h1 {font-size: 50px;}
+h2 {font-size: 40px;}
 .container {
     max-width: 1140px;
     margin: auto;
 }
-
 .flex {
     display: flex;
 }
-
 /*------------------------
  header section here 
 --------------------------*/
@@ -46,33 +30,27 @@ h2 {
     gap: 30px;
     align-items: center;
 }
-
 .header_text {
     width: 50%;
     padding: 0px 65px;
 }
-
 .head_img {
     width: 50%;
 }
-
 .head_img img {
     width: 85%;
     margin-bottom: -20px;
 }
-
 .header_text p {
     margin-bottom: 50px;
 }
-
 .header_text h1 {
     margin: 0;
 }
-
 .header_text .top_btm .button {
     text-decoration: none;
     color: white;
-    background-image: linear-gradient(45deg, var(--purple) , var(--ltpurple));
+    background-image: linear-gradient(45deg, var(--purple), var(--ltpurple));
     padding: 10px;
     border-radius: 10px;
     font-weight: 500;
@@ -80,21 +58,20 @@ h2 {
     font-size: 16px;
     width: 150px;
 }
-
 /*-----------
  hover here
  -------------*/
- .top_btm:hover .button{
+.top_btm:hover .button {
     background-image: linear-gradient(45deg, var(--ltpurple), var(--purple));
- }
- .watch_text a:hover{
+}
+.watch_text a:hover {
     background: var(--purple);
     transition: .5s;
     color: white;
- }
- .view_btn a:hover{
-    background-image: linear-gradient(45deg, var(--ltpurple), var(--purple));
- }
+}
+.view_btn a:hover {
+    background-image: linear-gradient(45deg, var(--purple), var(--ltpurple));
+}
 /*-----------------------
 blog section here 
 -------------------------*/
@@ -103,7 +80,6 @@ blog section here
     grid-template-columns: 220px auto;
     gap: 20px;
 }
-
 .match_buttons {
     flex-direction: column;
     text-align: center;
@@ -112,7 +88,6 @@ blog section here
     border-radius: 10px;
     height: 215px;
 }
-
 .match_buttons>a {
     padding: 13px 10px;
     margin: 10px;
@@ -123,37 +98,30 @@ blog section here
     border-radius: 5px;
     font-weight: 600;
 }
-
 .def_button {
     background-color: var(--purple) !important;
     color: white !important;
 }
-
 .blog {
     border: 1px solid rgb(196, 196, 196);
     border-radius: 10px 10px 0px 0px;
 }
-
 .main_blog {
     display: grid;
     grid-template-columns: repeat(3, auto);
     grid-template-rows: repeat(3, 1fr);
     gap: 20px;
 }
-
 .blog_img img {
     width: 100%;
 }
-
 .watch_text {
     padding: 15px;
 }
-
 .watch_text p {
     width: 240px;
     font-weight: 500;
 }
-
 .watch_text a {
     text-decoration: none;
     color: black;
@@ -161,32 +129,22 @@ blog section here
     padding: 5px;
     border-radius: 5px;
 }
-
 .watch_comment span {
     padding: 0 10px;
 }
-
 .view_btn {
     padding-top: 50px;
     display: none;
     margin: auto;
     width: 95px;
 }
-
 .view_btn>a {
-
-background: var(--purple);
-
-padding: 10px 15px;
-
-text-decoration: none;
-
-color: white;
-
-border-radius: 5px;
+    background-image: linear-gradient(45deg, var(--ltpurple), var(--purple));
+    padding: 10px 15px;
+    text-decoration: none;
+    color: white;
+    border-radius: 5px;
 }
-
-
 /*------------------------
  footer section here 
 ------------------------- */
@@ -195,26 +153,22 @@ footer {
     color: white;
     text-align: center;
 }
-
 .footer_links {
     justify-content: space-evenly;
     width: 800px;
     margin: auto;
     padding-bottom: 100px;
 }
-
 footer>h2 {
     display: block;
     margin: 50px;
     padding-top: 100px;
 }
-
 .footer_links a {
     text-decoration: none;
     color: white;
     text-align: center;
 }
-
 /*-----------------------------
 media query starts here 
 ------------------------------*/
@@ -222,29 +176,23 @@ media query starts here
     .container {
         width: 100%;
     }
-
     .main_head_container {
         flex-direction: column;
     }
-
     .header_text {
         text-align: center;
         width: 90%;
         padding: 0;
     }
-
     .header_text h1 {
         font-size: 8vw !important;
     }
-
     .header_text p {
         font-size: 4vw !important;
     }
-
     .header_text a {
         font-size: 4vw !important;
     }
-
     .match_buttons {
         font-size: 4vw !important;
     }
@@ -255,67 +203,53 @@ media query starts here
         width: 95%;
         margin: auto;
     }
-
     .main_head_container {
         flex-direction: column;
     }
-
     .header_text {
         text-align: center;
         width: 90%;
         padding: 0;
     }
-
     .header_text h1 {
         font-size: 7vw;
     }
-
     .header_text p {
         font-size: 3vw;
     }
-
     .header_text a {
         font-size: 3vw;
     }
-
     .head_img img {
         width: 100%;
     }
-
     section,
     header {
         margin-bottom: 30px;
     }
-
     .blogs {
         grid-template-columns: auto;
     }
-
     .main_blog {
         grid-template-columns: repeat(1, 1fr) !important;
     }
-
     .match_buttons {
         flex-direction: column !important;
         height: 225px !important;
         background: none;
         font-size: 3vw;
     }
-
     .match_buttons a {
         border: 1px solid gray;
     }
-
     .footer_links {
         width: 100%;
         flex-direction: column;
         gap: 18px;
     }
-
     .blog {
         border-radius: 20px 20px 0px 0px;
     }
-
     .view_btn {
         display: none !important;
     }
@@ -327,49 +261,40 @@ media query starts here
         width: 90%;
         margin: auto;
     }
-
     .head_img img {
         width: 100%;
     }
-
     .main_head_container {
         min-height: 500px;
     }
-
     .header_text {
         padding: 0 30px;
     }
-    .header_text h1{
+    .header_text h1 {
         font-size: 5vw;
     }
     .blogs {
         grid-template-columns: auto;
     }
-
     .main_blog {
         grid-template-columns: repeat(2, 1fr)
     }
-
     .last {
         display: none;
     }
-
     .match_buttons {
         background: none;
         flex-direction: row;
         height: 75px;
     }
-
     .match_buttons a {
         border: 1px solid gray;
         flex-basis: 100%;
         text-align: center;
     }
-
     .footer_links {
         width: 100%;
     }
-
     .view_btn {
         display: block;
         padding: 0px 0px;
@@ -377,5 +302,4 @@ media query starts here
         font-weight: 500;
         margin-top: 50px;
     }
-
 }
