--- a/style/style.css
+++ b/style/style.css
@@ -78,6 +78,7 @@ h2 {
     font-weight: 500;
     border: none;
     width: 150px;
+    font-size: 16px;
 }
 
 /*-----------
@@ -263,7 +264,7 @@ media query starts here
     }
 
     .header_text h1 {
-        font-size: 7vw;
+        font-size: 7vw !important;
     }
 
     .header_text p {
